--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</header>
 	<nav>
 		<ul>
-			<li><a href="https://timothy-masserant.oc.github.io/Olympic_College_Timothy_Masserant-CIS_155_Winter_2021/V1/about.html">About Page</a></li>
+			<li><a href="https://tmazz1252.github.io/about.html">About Page</a></li>
 			<li><a href="e:\\School\\CIS155\\Project\\V1\\about.html">How-To-Build</a></li>
 			<li><a href="e:\\School\\CIS155\\Project\\V1\\about.html">Market Places</a></li>
 			<li><a href="e:\\School\\CIS155\\Project\\V1\\about.html">N/A</a></li>
