--- a/about.html
+++ b/about.html
@@ -16,13 +16,13 @@
 
 <body>
     <header>
-        <a href="e:\\School\\CIS155\\Project\\V1\\index.html"><img src="Picture2.png" alt="" width="1100" height="250"/></a>
+        <a href="index.html"><img src="Picture2.png" alt="" width="1100" height="250"/></a>
             <p>Header photo created by myself with @Microsoft PowerPoint</p>
     </header>
     
     <nav>
 		<ul>
-			<li><a href="https://tmazz1252.github.io/V1/index.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="e:\\School\\CIS155\\Project\\V1\\about.html">How-To-Build</a></li>
 			<li><a href="e:\\School\\CIS155\\Project\\V1\\about.html">Market Places</a></li>
             <li><a href="e:\\School\\CIS155\\Project\\V1\\about.html">N/A</a></li>
