--- a/about.html
+++ b/about.html
@@ -23,9 +23,9 @@
     <nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="e:\\School\\CIS155\\Project\\V1\\about.html">How-To-Build</a></li>
+			<li><a href="How-To-Build.html">How-To-Build</a></li>
 			<li><a href="e:\\School\\CIS155\\Project\\V1\\about.html">Market Places</a></li>
-            <li><a href="e:\\School\\CIS155\\Project\\V1\\about.html">N/A</a></li>
+            <li><a href="about.html">About Page</a></li>
             <!--
                 Currently the only true link is the "Home" link, other pages do not exist yet.
             -->
