--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<nav>
 		<ul>
 			<li><a href="about.html">About Page</a></li>
-			<li><a href="e:\\School\\CIS155\\Project\\V1\\about.html">How-To-Build</a></li>
+			<li><a href="How-To-Build.html">How-To-Build</a></li>
 			<li><a href="e:\\School\\CIS155\\Project\\V1\\about.html">Market Places</a></li>
 			<li><a href="e:\\School\\CIS155\\Project\\V1\\about.html">N/A</a></li>
 			<!--
