--- a/How-To-Build.html
+++ b/How-To-Build.html
@@ -3,7 +3,7 @@
 	Timothy C Masserant
 	Project V2
 	2/13/21
-	index/homepage
+	How-To-Build page
 -->
 <html>
 
@@ -20,14 +20,14 @@
     <nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="How-To-Build.html">How-To-Build</a></li>
+			<li><a href="about.html">About Page</a></li>
 			<li><a href="e:\\School\\CIS155\\Project\\V1\\about.html">Market Places</a></li>
 			<li><a href="e:\\School\\CIS155\\Project\\V1\\about.html">N/A</a></li>
 			
 		</ul>
     </nav>
     <figure>
-        <img src="hammer.jpg" skew(5,5)/>
+        <img src="hammer.jpg" />
         <figcaption>Image related to feelings</figcaption>
     </figure>
     <li><a><img src="product-image.jpg" alt="" width="250" height="250"/></a></li>
