--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <!--
 	Timothy C Masserant
-	Project V1
-	1/22/21
+	Project V2
+	2/13/21
 	aboutPage
 -->
 <html lang="en" style="width: 100%; height: 100%;">
@@ -23,9 +23,9 @@
     <nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="How-To-Build.html">How-To-Build</a></li>
+			<li><a href="about.html">How-To-Build</a></li>
 			<li><a href="e:\\School\\CIS155\\Project\\V1\\about.html">Market Places</a></li>
-            <li><a href="about.html">About Page</a></li>
+            <li><a href="e:\\School\\CIS155\\Project\\V1\\about.html">N/A</a></li>
             <!--
                 Currently the only true link is the "Home" link, other pages do not exist yet.
             -->
@@ -39,6 +39,10 @@
         <h1>Versions</h1>
         <h2>V1</h2>
         <p>Everything seen on this website as of Jan 22nd, 2021</p>
+        <h3>V2</h3>
+        <li><p>Created the How-To-Build page and stylesheet and all elements included in those pages
+               which are all the module 3 and 4 demonstraions.</p></li>
+        <li><p>Added link references for the How-To-Build page in the index and about page</p></li>
 	</footer>
 </body>
 
