--- a/How-To-Build.html
+++ b/How-To-Build.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <!--
 	Timothy C Masserant
-	Project V2
-	2/13/21
+	Project V3
+	2/20/21
 	How-To-Build page
 -->
 <html>
@@ -30,6 +30,41 @@
         <img src="hammer.jpg" />
         <figcaption>Image related to feelings</figcaption>
     </figure>
+    <table class="Hardware">
+        <caption>Gear Required</caption>
+        <tr>
+            <th>Gear needed</th>
+            <th>Computer Case</th>
+            <th>Motherboard</th>
+            <th>Hard drive</th>
+            <th>CPU</th>
+            <th>GPU</th>
+            <th>RAM</th>
+            <th>PSU</th>
+            <th>Fan</th>
+        </tr>
+        <tr>
+            <th>Screwdriver</th>
+            <td colspan="8">Philips-head</td>
+            <!-- colspan spreads the data integer through a specified number of columns-->
+        </tr>
+        <tr>
+            <th>Cable</th>
+            <td>None</td>
+            <td>PSU cables</td>
+            <td>SATA-power</td>
+            <td>None</td>
+            <td>6+2 pin</td>
+            <td>None</td>
+            <td>Power Cable</td>
+            <td>Fan cables</td>
+        </tr>
+        <tr>
+            <th>Pliers</th>
+            <td colspan="8">Needle-nose</td>
+        </tr>
+    </table>
+    <!-- Two-dimensional cable for the most used tools in building a computer, will likely remove in future build. -->
     <li><a><img src="product-image.jpg" alt="" width="250" height="250"/></a></li>
     <li><b><img src="computer-motherboard-500x500.jpg" alt="" width="250" height="250"/></b></li>
     <li><c><img src="harddrive.png" alt="" width="250" height="250" usemap="#harddrive"/></c></li>
