--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <!--
 	Timothy C Masserant
-	Project V2
-	2/13/21
+	Project V3
+	2/20/21
 	index/homepage
 -->
 <html lang="en" style="width: 100%; height: 100%;">
@@ -21,19 +21,22 @@
 		<img src="Picture1.png" alt="" width="1100" height="250"/>
 		<p style="text-align: left;">Header photo created by myself with @Microsoft PowerPoint</p>
 	</header>
-	<nav>
-		<ul>
+	<nav class="horizontal">
+		<ul class="mainmenu">
 			<li><a href="about.html">About Page</a></li>
-			<li><a href="How-To-Build.html">How-To-Build</a></li>
+			<li><a href="" class="submenuTitle">How-To-Build &#9654;</a>
+				<ul class="submenu">
+					<li><a href="How-To-Build.html">one</a></li>
+					<li><a href="How-To-Build.html">two</a></li>
+					<li><a href="How-To-Build.html">three</a></li>
+				</ul>
+			</li>
 			<li><a href="e:\\School\\CIS155\\Project\\V1\\about.html">Market Places</a></li>
 			<li><a href="e:\\School\\CIS155\\Project\\V1\\about.html">N/A</a></li>
 			<!--
                 Currently the only true webpage link is the "About Page" link, other pages do not exist yet.
 			-->
-			<a href="#Bottom of Page">Click here to go to bottom of page</a>
-			<!--
-		  Targeted location hyperlink link
-	  		-->
+			
 		</ul>
 	</nav>
 	<div class="containter">
@@ -48,71 +51,8 @@
 	</div>
 	<article>
 		<h1>Introduction</h1>
-		<h2>Cuz I need it</h2>
 		<p>Welcome to the <strong>How-to-Build-a-PC</strong> website where our goal is to teach you to set up your own computer yourself.</p>
 	</article>
-	
-	<div class="two">
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-		<p>Lots of content to push down the page....</p>
-	  </div>
-	  <a href="#Top of Page">Click here to go to top of page</a>
-	  <a id="Bottom of Page">Bottom Page</a>
 	  <!--
 		  Targeted location hyperlink link and source
 	  -->
