--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <!--
 	Timothy C Masserant
-	Project V2
-	2/13/21
+	Project V3
+	2/20/21
 	aboutPage
 -->
 <html lang="en" style="width: 100%; height: 100%;">
@@ -23,7 +23,16 @@
     <nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="about.html">How-To-Build</a></li>
+			<nav class="horizontal">
+                <ul class="mainmenu">
+                    <li><a href="about.html">About Page</a></li>
+                    <li><a href="" class="submenuTitle">How-To-Build &#9654;</a>
+                        <ul class="submenu">
+                            <li><a href="How-To-Build.html">one</a></li>
+                            <li><a href="How-To-Build.html">two</a></li>
+                            <li><a href="How-To-Build.html">three</a></li>
+                        </ul>
+                    </li>
 			<li><a href="e:\\School\\CIS155\\Project\\V1\\about.html">Market Places</a></li>
             <li><a href="e:\\School\\CIS155\\Project\\V1\\about.html">N/A</a></li>
             <!--
@@ -43,6 +52,10 @@
         <li><p>Created the How-To-Build page and stylesheet and all elements included in those pages
                which are all the module 3 and 4 demonstraions.</p></li>
         <li><p>Added link references for the How-To-Build page in the index and about page</p></li>
+        <h3>V3</h3>
+        <li><p>Optimize website format for handheld devices</p></li>
+        <li><p>Created a pulldown function for the How-To-Build tab links</p></li>
+        <li><p>Created a table on How-To-Build page with border collapse and data cell borders</p></li>
 	</footer>
 </body>
 
