--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 					<li><a href="How-To-Build.html">three</a></li>
 				</ul>
 			</li>
+			<!--
+				Pull-down menu for the How-To-Build page, will add links to specific parts of page when those parts are made.
+			-->
 			<li><a href="e:\\School\\CIS155\\Project\\V1\\about.html">Market Places</a></li>
 			<li><a href="e:\\School\\CIS155\\Project\\V1\\about.html">N/A</a></li>
 			<!--
